k8s-apps/petclinic/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinci-app-external-secrets
  labels:
    app: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: petclinic
