k8s-apps/petclinic/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
spec:
  selector:
    app.kubernetes.io/name: petclinic
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
