k8s-apps/petclinic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-svc
  labels:
    app: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: petclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "petclinic.elmesary.net"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: petclinic-svc
            port:
              number: 443 
  tls:
    - hosts:
      - petclinic.elmesary.net
      secretName: letsencrypt-prod
